# embeddertg

./: .env.example  .gitignore  Makefile  README.md  embeddertg.service  embeddertg.service.mo  justfile  pyproject.toml
.vim/: coc-settings.json
embeddertg/: __init__.py  __main__.py  discord.py  twitter.py  youtube.py
scripts/: mo
