[tool.poetry]
name = "embeddertg"
version = "0.1.0"
description = ""
authors = ["Brian Wo <45139213+brainwo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^21.0"
yt-dlp = "^2024.4.9"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.2.0"
flake8 = "^7.0.0"
ruff = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env"
