[tool.poetry]
name = "embeddertg"
version = "0.2.0"
description = "Embed videos directly on Telegram"
authors = ["Brian Wo <45139213+brainwo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^22.0"
yt-dlp = "^2025.03.27"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.2.0"
flake8 = "^7.0.0"
ruff = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env"
